# bili2insight

./: .editorconfig  .gitattributes  .gitignore  CLAUDE.md  README.md  STYLE_MAPPING_TABLE.md  STYLE_MIGRATION_CHECKLIST.md  _fix3.py  dev.bat  encoding_check.py  index.html  package-lock.json  package.json  vite.config.ts
scripts/: setup_dev.py
src/: App.vue  router.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  export.rs  history.rs  lib.rs  main.rs  pipeline.rs
src/stores/: app.ts  auth.ts  favorites.ts  settings.ts  settingsStore.ts  templates.ts
src/styles/: tokens.css
src/utils/: errors.ts  invoke.ts  markdown.ts  types.ts
src/views/: HistoryView.vue  HomeView.vue  QueueView.vue  ResultView.vue  SourceFavView.vue  SourceLocalView.vue  SourceUrlView.vue
worker/: asr_worker.py  bili_worker.py  requirements.txt
